# glacier3dviz

./: build.sh  genindex.html  pyproject.toml  search.html  searchindex.js
_sources/tutorials/: general_styling.ipynb
glacier3dviz/tools/: map_annotations.py  pyvista_xarray_ext.py  texture.py  viz.py
tutorials/: advanced_visualizations.ipynb  annotations.html  annotations.ipynb  gallery.html  general_styling.ipynb  welcome.html
