[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "glacier3dviz"
dynamic = ["version"]
description = "3D visualization tool for glacier data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }

authors = [
  { name = "Glacier:3D-Viz contributors" }
]

dependencies = [
  "accessible-pygments==0.0.5",
  "affine==2.4.0",
  "aiohappyeyeballs==2.4.3",
  "aiohttp==3.10.10",
  "aiosignal==1.3.1",
  "alabaster==0.7.16",
  "anyio==4.6.2.post1",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.3.0",
  "asciitree==0.3.3",
  "asttokens==2.4.1",
  "async-lru==2.0.4",
  "attrs==24.2.0",
  "Babel==2.14.0",
  "beautifulsoup4==4.12.3",
  "bleach==6.1.0",
  "bokeh==3.6.1",
  "Brotli==1.1.0",
  "cached-property==1.5.2",
  "Cartopy==0.24.0",
  "certifi==2024.8.30",
  "cffi==1.17.1",
  "cftime==1.6.4",
  "charset-normalizer==3.4.0",
  "click==8.1.7",
  "click-plugins==1.1.1",
  "cligj==0.7.2",
  "cloudpickle==3.1.0",
  "colorama==0.4.6",
  "comm==0.2.2",
  "contextily==1.6.2",
  "contourpy==1.3.0",
  "cycler==0.12.1",
  "cytoolz==1.0.0",
  "dask==2024.10.0",
  "dask-expr==1.1.16",
  "debugpy==1.8.7",
  "decorator==5.1.1",
  "defusedxml==0.7.1",
  "distributed==2024.10.0",
  "docutils==0.20.1",
  "entrypoints==0.4",
  "exceptiongroup==1.2.2",
  "executing==2.1.0",
  "fasteners==0.17.3",
  "fastjsonschema==2.20.0",
  "fonttools==4.54.1",
  "fqdn==1.5.1",
  "frozenlist==1.4.1",
  "fsspec==2024.10.0",
  "geographiclib==2.0",
  "geopy==2.4.1",
  "ghp-import==2.1.0",
  "glacier3dviz==0.0.1",
  "greenlet==3.1.1",
  "h11==0.14.0",
  "h2==4.1.0",
  "hpack==4.0.0",
  "httpcore==1.0.6",
  "httpx==0.27.2",
  "hyperframe==6.0.1",
  "idna==3.10",
  "imagecodecs==2024.9.22",
  "imageio==2.36.0",
  "imageio-ffmpeg==0.5.1",
  "imagesize==1.4.1",
  "importlib_metadata==8.5.0",
  "importlib_resources==6.4.5",
  "ipycanvas==0.13.3",
  "ipyevents==2.0.2",
  "ipykernel==6.29.5",
  "ipython==8.28.0",
  "ipyvtklink==0.2.2",
  "ipywidgets==8.1.5",
  "ipywidgets_bokeh==1.6.0",
  "isoduration==20.11.0",
  "jedi==0.19.1",
  "Jinja2==3.1.4",
  "joblib==1.4.2",
  "json5==0.9.25",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "jupyter-book==1.0.3",
  "jupyter-cache==1.0.0",
  "jupyter-events==0.10.0",
  "jupyter-lsp==2.2.5",
  "jupyter_client==8.6.3",
  "jupyter_core==5.7.2",
  "jupyter_server==2.14.2",
  "jupyter_server_terminals==0.5.3",
  "jupyterlab==4.2.5",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_server==2.27.3",
  "jupyterlab_widgets==3.0.13",
  "kiwisolver==1.4.7",
  "latexcodec==2.0.1",
  "lazy_loader==0.4",
  "linkify-it-py==2.0.3",
  "locket==1.0.0",
  "loguru==0.7.2",
  "lz4==4.3.3",
  "Markdown==3.6",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.1",
  "matplotlib==3.9.2",
  "matplotlib-inline==0.1.7",
  "mdit-py-plugins==0.4.2",
  "mdurl==0.1.2",
  "mercantile==1.2.1",
  "mistune==3.0.2",
  "more-itertools==10.5.0",
  "msgpack==1.1.0",
  "multidict==6.1.0",
  "munkres==1.1.4",
  "myst-nb==1.1.2",
  "myst-parser==2.0.0",
  "nbclient==0.10.0",
  "nbconvert==7.16.4",
  "nbformat==5.10.4",
  "nest_asyncio==1.6.0",
  "netCDF4==1.7.1",
  "networkx==3.4.1",
  "notebook_shim==0.2.4",
  "numcodecs==0.13.1",
  "numpy==2.1.2",
  "overrides==7.7.0",
  "packaging==24.1",
  "pandas==2.2.3",
  "pandocfilters==1.5.0",
  "panel==1.5.3",
  "param==2.1.1",
  "parso==0.8.4",
  "partd==1.4.2",
  "pexpect==4.9.0",
  "pickleshare==0.7.5",
  "pillow==11.0.0",
  "pip==24.2",
  "pkgutil_resolve_name==1.3.10",
  "platformdirs==4.3.6",
  "pooch==1.8.2",
  "prometheus_client==0.21.0",
  "prompt_toolkit==3.0.48",
  "propcache==0.2.0",
  "psutil==6.0.0",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pyarrow==18.0.0",
  "pybtex==0.24.0",
  "pybtex-docutils==1.0.3",
  "pycparser==2.22",
  "pydata-sphinx-theme==0.16.0",
  "Pygments==2.18.0",
  "pyparsing==3.2.0",
  "pyproj==3.7.0",
  "PyQt5==5.15.11",
  "PyQt5-Qt5==5.15.15",
  "PyQt5_sip==12.15.0",
  "pyshp==2.3.1",
  "PySocks==1.7.1",
  "python-dateutil==2.9.0",
  "python-json-logger==2.0.7",
  "pytz==2024.1",
  "pyvista==0.44.1",
  "pyvista-xarray==0.1.7",
  "pyvistaqt==0.11.1",
  "pyviz_comms==3.0.3",
  "PyWavelets==1.7.0",
  "PyYAML==6.0.2",
  "pyzmq==26.2.0",
  "QtPy==2.4.1",
  "rasterio==1.4.1",
  "referencing==0.35.1",
  "requests==2.32.3",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rioxarray==0.17.0",
  "rpds-py==0.20.0",
  "scikit-image==0.24.0",
  "scipy==1.14.1",
  "scooby==0.10.0",
  "Send2Trash==1.8.3",
  "setuptools==75.1.0",
  "shapely==2.0.6",
  "six==1.16.0",
  "sniffio==1.3.1",
  "snowballstemmer==2.2.0",
  "snuggs==1.4.7",
  "sortedcontainers==2.4.0",
  "soupsieve==2.5",
  "Sphinx==7.4.7",
  "sphinx-book-theme==1.1.3",
  "sphinx-comments==0.0.3",
  "sphinx-copybutton==0.5.2",
  "sphinx-jupyterbook-latex==1.0.0",
  "sphinx-multitoc-numbering==0.1.3",
  "sphinx-thebe==0.3.1",
  "sphinx-togglebutton==0.3.2",
  "sphinx_design==0.6.1",
  "sphinx_external_toc==1.0.1",
  "sphinxcontrib-applehelp==2.0.0",
  "sphinxcontrib-bibtex==2.6.3",
  "sphinxcontrib-devhelp==2.0.0",
  "sphinxcontrib-htmlhelp==2.1.0",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==2.0.0",
  "sphinxcontrib-serializinghtml==1.1.10",
  "SQLAlchemy==2.0.36",
  "stack-data==0.6.2",
  "tabulate==0.9.0",
  "tblib==3.0.0",
  "terminado==0.18.1",
  "tifffile==2024.9.20",
  "tinycss2==1.3.0",
  "tomli==2.0.2",
  "toolz==1.0.0",
  "tornado==6.4.1",
  "tqdm==4.67.0",
  "traitlets==5.14.3",
  "trame==3.6.5",
  "trame-client==3.3.2",
  "trame-server==3.2.3",
  "trame-vtk==2.8.10",
  "trame-vuetify==2.7.1",
  "types-python-dateutil==2.9.0.20241003",
  "typing-utils==0.1.0",
  "typing_extensions==4.12.2",
  "tzdata==2024.2",
  "uc-micro-py==1.0.3",
  "uri-template==1.3.0",
  "urllib3==2.2.3",
  "vtk==9.3.1",
  "wcwidth==0.2.13",
  "webcolors==24.8.0",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "wheel==0.44.0",
  "widgetsnbextension==4.0.13",
  "wslink==2.2.1",
  "xarray==2024.10.0",
  "xyzservices==2024.9.0",
  "yarl==1.15.3",
  "zarr==2.18.3",
  "zict==3.0.0",
  "zipp==3.20.2",
  "zstandard==0.23.0",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
]
docs = [
  "jupyter-book",
]
all = [
  "jupyterlab",
  "jupyter-book",
]

[project.urls]
Homepage = "https://glacier3dviz.oggm.org"
Repository = "https://github.com/OGGM/glacier3dviz"
Issues = "https://github.com/OGGM/glacier3dviz/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs*", "tutorials*", "notebooks*", "examples*"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

